<resources>
  <string name="_0_stars">0 Stars</string>
  <string name="app_name">CustomActivityShowcase</string>
  <string name="basic_example">Basic Example</string>
  <string name="basic_example_desc">In this Basic Example, you simply start the custom activity, and then from the device you send a final payload to close the activity </string>
  <string name="basic_conversational_example">Basic Conversational Example</string>
  <string name="basic_conversational_example_desc">In this Basic Conversational Example, once started, you send a joke to the activity, and the device responds, and then from the device you send a final payload to close the activity </string>
  <string name="basic_conversational_example_joke">Why did the Storm Trooper buy an iPhone?</string>
  <string name="big_star_off">big star off</string>
  <string name="big_star_on">big star on</string>
  <string name="carousel_example">Carousel Example</string>
  <string name="carousel_example_desc">In this Carousel Example, after starting the activity, you will see a series of images displayed carousel-style on the device, to exit the activity use the four finger exit (touching all four corners of the screen at once)</string>
  <string name="connect">Connect</string>
  <string name="custom_activities">Custom Activities</string>
  <string name="customer_name">Customer Name:</string>
  <string name="final_payload">Final Payload:</string>
  <string name="initial_payload_to_send">Initial Payload to be Sent to Activity:</string>
  <string name="joke_response">Joke Response:</string>
  <string name="lan_pay_address">wss://10.0.0.236:12345/remote_pay</string>
  <string name="lan_pay_display">Network Clover Connector</string>
  <string name="nfc_example">NFC Example</string>
  <string name="nfc_example_desc">In this NFC Example, after starting the activity, you will see a dialog on the device instructing you to tap an NFC card near the center of the screen. (Note this will currently only work for ByPass Fortress Cards) After tapping the screen the activity will finish and send the card\'s serial number back to the example app</string>
  <string name="non_blocking">Non-Blocking</string>
  <string name="off">Off</string>
  <string name="on">On</string>
  <string name="payload_placeholder">{&quot;Message&quot;:&quot;Start Activity&quot;}</string>
  <string name="questions_to_be_sent">Questions to be sent to Custom Rating Activity</string>
  <string name="questions_sent">Questions sent to the Custom Rating Activity</string>
  <string name="question1">How would you rate the overall quality of your entree?</string>
  <string name="question2">How would you rate the overall performance of your server?</string>
  <string name="question3">How would you rate the overall value of your dining experience?</string>
  <string name="question4">How likely are you to dine at this establishment again in the near future?</string>
  <string name="ratings_example">Ratings Example</string>
  <string name="ratings_example_desc">In this Ratings Example, once started, the user will enter a phone number into the device, which will then be sent back to the example app, then based on the number, a customer name will be sent back to the device, where the user can choose to rate their experience, and the device will tell the example app (this app) if the user wants to rate their dining experience, if they do then the app will send back the various questions, and the device will send back the answers as they are entered. Once the user hits done the ratings will clear</string>
  <string name="received_phone_number">Received Phone Number: </string>
  <string name="reset_device">Reset Device</string>
  <string name="send_joke">Send Joke</string>
  <string name="send_message">Send Message</string>8
  <string name="send_payload">Send Payload</string>
  <string name="sending_customer_name">Sending Customer Name %1$s to Ratings Custom Activity for phone number %2$s</string>
  <string name="start">Start</string>
  <string name="start_activity">Start Activity</string>
  <string name="usb_clover_connector">USB Clover Connector</string>
  <string name="unknown_payload">The payload received in a message from the calling system is not a known class.  messageType = </string>
  <string name="web_view_example">Web View Example</string>
  <string name="web_view_example_desc">In this Web View Example, you start the custom activity, which will open a Web View on the device, from which you enter in a final payload to close the activity</string>
  <string name="x">X</string>
</resources>
