<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainContainer">
  <LinearLayout
      style="@style/ContainerLeft">
    <TextView
        style="@style/MainHeader"
        android:text="@string/basic_conversational_example"/>
    <Switch
        style="@style/Switch"
        android:id="@+id/BasicConversationalBlocking"
        android:checked="false"/>
    <View
        style="@style/HorizontalDivider"/>
    <TextView
        style="@style/Header"
        android:text="@string/initial_payload_to_send"/>
    <EditText
        android:id="@+id/BasicConversationalActivityPayload"
        style="@style/InitialPayload"/>
    <View
        style="@style/HorizontalDivider"/>
    <Button
        android:id="@+id/BasicConversationalStartActivity"
        style="@style/StartActivityButton"
        android:layout_marginTop="10dp"/>
    <View
        style="@style/VerticalFiller"/>
    <TextView
        style="@style/CustomActivityDescription"
        android:text="@string/basic_conversational_example_desc" />
  </LinearLayout>
  <View
      style="@style/VerticalDivider"/>
  <LinearLayout
      style="@style/ContainerRight">
    <LinearLayout
        style="@style/Row">
      <TextView
          style="@style/Header"
          android:text="@string/basic_conversational_example_joke"/>
      <Button
          android:id="@+id/SendJoke"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/button_border_padding"
          android:enabled="false"
          android:text="@string/send_joke"/>
    </LinearLayout>
    <LinearLayout
        style="@style/Row"
        android:layout_marginTop="20dp">
      <TextView
          style="@style/Header"
          android:text="@string/joke_response"/>
      <TextView
          android:id="@+id/JokeResponse"
          style="@style/Value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        style="@style/Row">
      <TextView
          style="@style/Header"
          android:text="@string/final_payload"/>
      <TextView
          android:id="@+id/BasicConversationalFinalPayload"
          style="@style/Value" />
    </LinearLayout>
    <View
        style="@style/VerticalFiller"/>
    <Button
        style="@style/ResetButton"/>
  </LinearLayout>
</LinearLayout>