<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_weight="1"
      android:gravity="center_horizontal|bottom"
      android:layout_height="0dp">
    <LinearLayout
        android:id="@+id/BasicExample"
        style="@style/CustomButton">
      <TextView
          style="@style/CustomText"
          android:text="@string/basic_example"/>
      <ImageView
          style="@style/CustomImage"
          android:src="@drawable/ic_basic_example"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/BasicConversationalExample"
        style="@style/CustomButton">
      <TextView
          style="@style/CustomText"
          android:text="@string/basic_conversational_example"/>
      <ImageView
          style="@style/CustomImage"
          android:src="@drawable/ic_basic_conversational"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/CarouselExample"
        style="@style/CustomButton">
      <TextView
          style="@style/CustomText"
          android:text="@string/carousel_example"/>
      <ImageView
          style="@style/CustomImage"
          android:src="@drawable/ic_carousel" />
    </LinearLayout>
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_weight="1"
      android:gravity="center_horizontal|top"
      android:layout_height="0dp">
    <LinearLayout
        android:id="@+id/WebViewExample"
        style="@style/CustomButton">
      <TextView
          style="@style/CustomText"
          android:text="@string/web_view_example"/>
      <ImageView
          style="@style/CustomImage"
          android:src="@drawable/ic_web"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/RatingsExample"
        style="@style/CustomButton">
      <TextView
          style="@style/CustomText"
          android:text="@string/ratings_example"/>
      <ImageView
          style="@style/CustomImage"
          android:src="@drawable/ic_ratings"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/NFCExample"
        style="@style/CustomButton">
      <TextView
          style="@style/CustomText"
          android:text="@string/nfc_example"/>
      <ImageView
          style="@style/CustomImage"
          android:src="@drawable/ic_nfc"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>